--- a/Demo1/style.css
+++ b/Demo1/style.css
@@ -4,6 +4,23 @@ body {
 
 h1 {
   color:darkgreen;
-  font-size: 148px;
-  font-family: helvetica;
+  font-size: 100px;
+  font-family: "EB Garamond";
+  font-style: italic;
+  font-weight: 100;
+  font-variant: small-caps;
+}
+h2,
+h3,
+h4 {
+  color:darkgreen;
+  font-size: 48px;
+  font-family: "EB Garamond";
+}
+
+
+body {
+  color:darkgreen;
+  font-size: 24px;
+  font-family: "EB Garamond";
 }
